--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
+    "@rails/webpacker": "rails/webpacker#b6c2180",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.5",
+    "tailwindcss": "^2.1.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "postcss": "^8.2.9",
+    "postcss-loader": "4.1.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
