--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pm_MongoDB",
+  "name": "my-webpack-project",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
@@ -9,13 +9,32 @@
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.1",
     "tailwindcss": "^2.1.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack-cli": "^4.6.0"
   },
-  "version": "0.1.0",
+  "version": "1.0.0",
   "devDependencies": {
-    "postcss": "^8.2.9",
-    "postcss-loader": "4.1.0",
+    "@webpack-cli/generators": "^2.0.0",
+    "css-loader": "^5.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^5.2.0",
+    "sass": "^1.32.10",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.33.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "description": "My webpack project",
+  "scripts": {
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   }
 }
