--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "5.2.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.1",
     "tailwindcss": "^2.1.1",
@@ -19,7 +20,6 @@
   "version": "1.0.0",
   "devDependencies": {
     "@webpack-cli/generators": "^2.0.0",
-    "css-loader": "^5.2.2",
     "html-webpack-plugin": "^5.3.1",
     "postcss": "^8.2.10",
     "postcss-loader": "^5.2.0",
