--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.1",
+    "postcss-safe-parser": "^7.0.0",
     "tailwindcss": "^2.1.1",
     "turbolinks": "^5.2.0",
     "webpack-cli": "^4.6.0"
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@webpack-cli/generators": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
-    "postcss": "^8.2.10",
+    "postcss": "^8.4.32",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
