--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "rails/webpacker#b6c2180",
+    "@rails/webpacker": "5.4.4",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
@@ -19,7 +19,7 @@
     "postcss-safe-parser": "^7.0.0",
     "tailwindcss": "^2.1.1",
     "turbolinks": "^5.2.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^3.3.12"
   },
   "version": "1.0.0",
   "devDependencies": {
@@ -30,8 +30,8 @@
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.33.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^4.46.0",
+    "webpack-dev-server": "^3"
   },
   "description": "My webpack project",
   "scripts": {
