Lock down Node.js version

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartkick": "^4.0.4",
     "css-loader": "5.2.2",
     "jquery": "^3.6.0",
+    "node": "16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.1",
     "tailwindcss": "^2.1.1",
@@ -39,5 +40,8 @@
     "build:prod": "webpack --mode=production",
     "watch": "webpack --watch",
     "serve": "webpack serve"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
