--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "description": "My webpack project",
   "scripts": {
+    "start":"bin/webpack-dev-server",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
